--- a/src/main/webapp/assets/css/pages/forum.css
+++ b/src/main/webapp/assets/css/pages/forum.css
@@ -1,5 +1,5 @@
 
-@import "../variables-light.css";
+@import "../variables.css";
 @import "../utilities.css";
 @import "../layout.css";
 
@@ -38,7 +38,7 @@
 .form-group input:focus,
 .form-group select:focus,
 .form-group textarea:focus {
-  border-color: var(--primary);
+  border-color: var(--primary-color);
   box-shadow: 0 0 0 2px rgba(66,133,244,0.2);
   outline: none;
 }
