--- a/src/main/webapp/assets/css/pages/home/sections/hero.css
+++ b/src/main/webapp/assets/css/pages/home/sections/hero.css
@@ -1,6 +1,6 @@
-@import "../variables.css";
-@import "../utilities.css";
-@import "../layout.css";
+@import "../../../variables.css";
+@import "../../../utilities.css";
+@import "../../../layout.css";
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+DK+Loopet&display=swap');
 
 /* ===== Hero Section Full-Width Background ===== */
