--- a/src/main/webapp/assets/css/pages/home/sections/cta.css
+++ b/src/main/webapp/assets/css/pages/home/sections/cta.css
@@ -2,7 +2,7 @@
  * CTA Section 样式
  */
 
-@import "../../../variables-light.css";
+@import "../../../style/variables-light.css";
 @import "../../../utilities.css";
 @import "../../../layout.css";
 @import "../../../components/buttons.css";
