--- a/src/main/webapp/assets/css/pages/home/sections/features.css
+++ b/src/main/webapp/assets/css/pages/home/sections/features.css
@@ -4,7 +4,7 @@
 
 @import "../../../style/variables-light.css";
 @import "../../../utilities.css";
-@import "../../../layout.css";
+@import "../../../components/layout.css";
 @import "../../../components/cards.css";
 
 /* ===== Features Overview Section ===== */
@@ -69,7 +69,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    color: var(--text-light);
 }
 
 .feature-card:hover {
@@ -77,11 +76,6 @@
     box-shadow: 0 12px 32px rgba(0, 0, 0, 0.15);
 }
 
-.feature-card i {
-    font-size: 2.5rem;
-    margin-bottom: var(--spacing-md);
-    color: var(--text-light);
-}
 
 .feature-card h3 {
     font-size: var(--font-size-lg);
