--- a/src/main/webapp/assets/css/style/variables-light.css
+++ b/src/main/webapp/assets/css/style/variables-light.css
@@ -11,7 +11,7 @@
     --spacing-xxl: 6rem;
 
     /* Font sizes */
-    --font-size-sm: 0.875rem;
+    --font-size-sm: 0.5rem;
     --font-size-md: 1rem;
     --font-size-lg: 1.25rem;
     --font-size-xl: 2rem;
@@ -42,18 +42,19 @@
     --section-height-default: 60vh;
     --section-height-compact: auto;
 
-    --header-bg: rgb(42, 66, 100);  /* 夜间导航背景 */
+    --header-bg: rgb(0, 0, 0);  /* 夜间导航背景 */
     --header-text: #ffffff;/* 夜间导航文字 */
     --headerhome-bg: rgba(0, 0, 0, 0.6);  /* 夜间导航背景 */
     --headerhome-text: #ffffff;/* 夜间导航文字 */
 
     /* Light theme colors */
-    --bg-primary: #000000;
-    --bg-secondary: #f0f0f0;
-    --bg-tertiary: #e0e0e0;
+    --bg-primary: #ffffff;
+    --bg-inverse: #000000;
+    --bg-banner: linear-gradient(135deg, #3d7cf4, #2d59c3);
 
     --text-primary: #000000;
     --text-inverse: #ffffff;
+    --text-hero: #ffffff;
     --text-color: var(--text-primary);
 
     --primary-color:   #3d7cf4;
@@ -62,27 +63,19 @@
     --card-bg: #f0f0f0;
     --divider: #e0e0e0;
 
-    --color-morandi-coffee: #ceb19b;  /* 柔和咖啡色 */
-    --color-morandi-mint: #a4b3c9;  /* 柔和薄荷绿 */
-    --color-morandi-lavender:  #A399B6;  /* 柔和薰衣草紫 */
-    --color-morandi-slate:     #7D8CA3;  /* 柔和石板蓝 */
-    --color-morandi-peach: #2c4363;  /* 柔和桃粉色 */
-    --color-morandi-cream:     #E7E2D8;  /* 柔和奶油色 */
-    --color-morandi-stone:     #B0A8A1;  /* 柔和石灰灰 */
-
     /* 渐变定义 */
     --gradient-hero:     black;
     --gradient-features: #768774;
-    --gradient-overview: linear-gradient(135deg, var(--color-morandi-mint), var(--color-morandi-stone));
+    --gradient-overview: linear-gradient(135deg,#a4b3c9,#B0A8A1);
     --gradient-compare:  #A399B6;
-    --gradient-forum:    #42556d;
+    --gradient-forum: #bc9094;
     --gradient-profile:  #a4b3c9;
     --gradient-cta:      #B0A8A1;
 
     /* ——— 流光按钮专属变量 ——— */
     --border-width: 0.25em;
     --border-radius: 1em;
-    --border-color: #848aa5;
+    --border-color: #3d5ae8;
     --border-blur: 0.75em;
     --transition-speed: 0.5s;
 }
